# rag-debugger

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
apps/dashboard/: .prettierrc  Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/analytics/: page.tsx
apps/dashboard/app/playground/: page.tsx
apps/dashboard/app/settings/: page.tsx
apps/dashboard/app/traces/: page.tsx
apps/dashboard/components/: ChunkCard.tsx  ChunkWaterfall.tsx  EmbeddingScatter.tsx  ErrorBoundary.tsx  GroundingHighlighter.tsx  LiveQueryPanel.tsx  MetricsChart.tsx  PipelineTimeline.tsx  TraceList.tsx
apps/dashboard/components/analytics/: ChartCard.tsx  ChartTooltip.tsx  ErrorBreakdownChart.tsx  GroundingTrendChart.tsx  ImprovementTable.tsx  LatencyChart.tsx  VolumeChart.tsx
apps/dashboard/components/home/: GettingStarted.tsx  LiveFeed.tsx  StatCard.tsx  (+2 more)
apps/dashboard/hooks/: useEmbeddingProjection.ts  useRAGMetrics.ts  useTraceStream.ts
apps/dashboard/lib/: api.ts  types.ts
apps/server/: Dockerfile  database.py  grounding.py  main.py  models.py  pyproject.toml
apps/server/routers/: analytics.py  events.py  playground.py  traces.py  ws.py
apps/server/tests/: conftest.py  test_analytics.py  test_bulk_delete.py  test_events.py  test_live_broadcast.py  test_traces.py
apps/test-app/: README.md  main.py  pyproject.toml
docs/: DASHBOARD.md  PLAYGROUND.md  SDK.md  SERVER.md
scripts/: release.sh  seed_data.py
(+23 files in other folders)
