[project]
name = "rag-debugger-server"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "duckdb>=0.10.0",
  "httpx>=0.26.0",
  "sentence-transformers>=2.5.0",
  "pydantic>=2.5.0",
  "python-multipart>=0.0.6",
  "websockets>=12.0",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "httpx>=0.26.0"]

[tool.setuptools]
packages = ["routers", "data"]
# Or, if this directory shouldn't be installed as a package at all:
# py-modules = []
